third_party/rust/cxx/v1/crate/tests/ui/derive_duplicate.stderr
error[E0119]: conflicting implementations of trait `std::clone::Clone` for type `ffi::Struct`
 --> tests/ui/derive_duplicate.rs:3:21
  |
3 |     #[derive(Clone, Clone)]
  |              -----  ^^^^^ conflicting implementation for `ffi::Struct`
  |              |
  |              first implementation here
